# datarobot-agent-skills

./: .env.example  .gitignore  .yamlfmt.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  Taskfile.yaml  gemini-extension.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.github/: CODEOWNERS
.github/workflows/: publish-catalog.yml  publish-npm.yml  review-router.yml  test-skills-e2e.yml  trivy-scan.yml  validate-skills.yml
.skills/progressive-disclosure/: SKILL.md
PRD/: explain_the_swarm.md  plan.md
af-component-writeup/: af.md
datarobot-app-framework/: SKILL.md
datarobot-app-framework-agent/: SKILL.md
datarobot-app-framework-agent/scenarios/: agent-with-tools.md
datarobot-app-framework-cicd/: QUICK_REFERENCE.md  README.md  SKILL.md
datarobot-app-framework-cicd/scripts/: decrypt-secrets.sh  encrypt-secrets.sh  (+10 more)
datarobot-data-preparation/: SKILL.md
datarobot-feature-engineering/: SKILL.md
datarobot-model-deployment/: SKILL.md
datarobot-model-explainability/: SKILL.md
datarobot-model-training/: SKILL.md
datarobot-templates-cicd/: QUICK_REFERENCE.md  README.md  SKILL.md
docs/: AGENT_FRAMEWORK_INTEGRATION.md  DEVELOPMENT_AND_CUSTOMIZATION.md  LANGGRAPH_INTEGRATION.md  USAGE_GUIDE.md  future.md
dr-data-preparation/: SKILL.md
dr-feature-engineering/: SKILL.md
dr-model-deployment/: SKILL.md
dr-model-explainability/: SKILL.md
dr-model-monitoring/: SKILL.md
dr-model-training/: SKILL.md
dr-predictions/: SKILL.md
sandbox/: .gitignore  README.md  check-plugin.sh
(+207 files in other folders)
