[project]
name = "datarobot-agent-skills"
version = "0.0.1"
description = "DataRobot agent skills"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.10",
]
e2e = [
    "datarobot-agent-tester @ git+https://github.com/datarobot/datarobot-agent-tester@main",
    "python-dotenv>=1.0",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

